<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Workout_Selection"
    tools:layout_editor_absoluteX="1dp"
    tools:layout_editor_absoluteY="1dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="412dp"
        android:layout_height="83dp"
        android:background="@color/header_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/Dropdown"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginEnd="80dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_background"
            android:contentDescription="@string/DropDown"
            android:paddingEnd="3dp"
            android:paddingBottom="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color" />

        <ImageButton
            android:id="@+id/Settings"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginStart="80dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_background"
            android:contentDescription="@string/Settings"
            android:paddingTop="2dp"
            android:paddingEnd="3dp"
            android:paddingBottom="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/settings_gear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Dropdown"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/new_workout"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="180dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/jockey_one"
        android:text="@string/new_workout"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <Button
        android:id="@+id/load_workout"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="100dp"
        android:text="@string/load_workout"
        android:textColor="@color/black"
        android:fontFamily="@font/jockey_one"
        android:textSize="23sp"
        android:background="@drawable/button_background"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_workout" />
</androidx.constraintlayout.widget.ConstraintLayout>


