<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings_Page">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="@color/header_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/Dropdown"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginEnd="80dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_background"
            android:contentDescription="@string/DropDown"
            android:paddingEnd="3dp"
            android:paddingBottom="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Home"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color" />

        <ImageButton
            android:id="@+id/Home"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginStart="80dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_background"
            android:contentDescription="@string/Home"
            android:paddingTop="2dp"
            android:paddingEnd="3dp"
            android:paddingBottom="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Dropdown"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/Settings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/jockey_one"
        android:text="@string/Settings_Page"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header" />

    <CheckBox
        android:id="@+id/checkBox_settings"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Turn On Notifications"
        android:background="@drawable/button_background"
        android:fontFamily="@font/jockey_one"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Settings_title"/>

    <LinearLayout
        android:id="@+id/notifications_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox_settings" >

    </LinearLayout>

    <Button
        android:id="@+id/save_changes"
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/jockey_one"
        android:text="@string/Save_Settings"
        android:textColor="@color/black"
        android:textSize="23sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notifications_time" />


</androidx.constraintlayout.widget.ConstraintLayout>