<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/saved_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Workout_Creation.Saved_Workout_Selection">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="@color/header_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/Dropdown"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginEnd="80dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_background"
            android:contentDescription="@string/DropDown"
            android:paddingEnd="3dp"
            android:paddingBottom="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color" />

        <ImageButton
            android:id="@+id/Settings"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginStart="80dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_background"
            android:contentDescription="@string/Settings"
            android:paddingTop="2dp"
            android:paddingEnd="3dp"
            android:paddingBottom="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/settings_gear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Dropdown"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:id="@+id/loaded_workout_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/jockey_one"
                android:text="@string/saved_workout_selection"
                android:textColor="@color/black"
                android:textSize="30sp" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>