<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Workout_Creation.ExerciseListCreation">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:background="@color/header_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/Dropdown"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginEnd="80dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_background"
            android:contentDescription="@string/DropDown"
            android:paddingEnd="3dp"
            android:paddingBottom="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/menu"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/Settings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color" />

        <ImageButton
            android:id="@+id/Settings"
            android:layout_width="80dp"
            android:layout_height="48dp"
            android:layout_marginStart="80dp"
            android:adjustViewBounds="true"
            android:background="@drawable/button_background"
            android:contentDescription="@string/Settings"
            android:paddingTop="2dp"
            android:paddingEnd="3dp"
            android:paddingBottom="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/settings_gear"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Dropdown"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/icon_color" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <Button
                android:id="@+id/back_button"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="left"
                android:background="@drawable/button_background"
                android:drawableLeft="@drawable/arrow_back"
                android:fontFamily="@font/jockey_one"
                android:text="Back"
                android:textColor="@color/black"
                android:textSize="23sp"
                app:backgroundTint="@null"/>

            <TextView
                android:id="@+id/exercise_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/Exercise_List"
                android:fontFamily="@font/jockey_one"
                android:textColor="@color/black"
                android:textSize="30sp"/>

            <LinearLayout
                android:id="@+id/scroll_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/exercise_example_layout"
                    android:layout_width="200dp"
                    android:layout_height="130dp"
                    android:layout_marginTop="25dp"
                    android:background="@drawable/button_background"
                    app:backgroundTint="@null" >

                    <TextView
                        android:id="@+id/exercise_example_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/jockey_one"
                        android:gravity="center_horizontal"
                        android:text="Example"
                        android:textColor="@color/black"
                        android:textSize="30sp" />

                    <View
                        android:layout_width="195dp"
                        android:layout_height="4dp"
                        android:layout_marginTop="40dp"
                        android:background="@color/border_color" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="55dp"
                        android:layout_marginStart="43dp"
                        android:fontFamily="@font/jockey_one"
                        android:text="Remove"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:background="@drawable/button_background"
                        app:backgroundTint="@null"/>

                </FrameLayout>


            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>